# backend/service-go/app/service-main/api/main/v1/main.pb.go
@@ -116,6 +116,203 @@ func (x *PingResp) GetRes() string {
 	return ""
 }
 
+type GetLeaderboardReq struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	First     int64  `protobuf:"varint,1,opt,name=first,proto3" json:"first,omitempty"`
+	Type      string `protobuf:"bytes,2,opt,name=type,proto3" json:"type,omitempty"`
+	StartTime string `protobuf:"bytes,3,opt,name=start_time,json=startTime,proto3" json:"start_time,omitempty"`
+	EndTime   string `protobuf:"bytes,4,opt,name=end_time,json=endTime,proto3" json:"end_time,omitempty"`
+}
+
+func (x *GetLeaderboardReq) Reset() {
+	*x = GetLeaderboardReq{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_main_v1_main_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetLeaderboardReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetLeaderboardReq) ProtoMessage() {}
+
+func (x *GetLeaderboardReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_main_v1_main_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetLeaderboardReq.ProtoReflect.Descriptor instead.
+func (*GetLeaderboardReq) Descriptor() ([]byte, []int) {
+	return file_api_main_v1_main_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *GetLeaderboardReq) GetFirst() int64 {
+	if x != nil {
+		return x.First
+	}
+	return 0
+}
+
+func (x *GetLeaderboardReq) GetType() string {
+	if x != nil {
+		return x.Type
+	}
+	return ""
+}
+
+func (x *GetLeaderboardReq) GetStartTime() string {
+	if x != nil {
+		return x.StartTime
+	}
+	return ""
+}
+
+func (x *GetLeaderboardReq) GetEndTime() string {
+	if x != nil {
+		return x.EndTime
+	}
+	return ""
+}
+
+type LeaderboardItem struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	WalletPub     string `protobuf:"bytes,1,opt,name=wallet_pub,json=walletPub,proto3" json:"wallet_pub,omitempty"`
+	Uname         string `protobuf:"bytes,2,opt,name=uname,proto3" json:"uname,omitempty"`
+	RetiredAmount string `protobuf:"bytes,3,opt,name=retired_amount,json=retiredAmount,proto3" json:"retired_amount,omitempty"`
+	Ens           string `protobuf:"bytes,4,opt,name=ens,proto3" json:"ens,omitempty"`
+}
+
+func (x *LeaderboardItem) Reset() {
+	*x = LeaderboardItem{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_main_v1_main_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *LeaderboardItem) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LeaderboardItem) ProtoMessage() {}
+
+func (x *LeaderboardItem) ProtoReflect() protoreflect.Message {
+	mi := &file_api_main_v1_main_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LeaderboardItem.ProtoReflect.Descriptor instead.
+func (*LeaderboardItem) Descriptor() ([]byte, []int) {
+	return file_api_main_v1_main_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *LeaderboardItem) GetWalletPub() string {
+	if x != nil {
+		return x.WalletPub
+	}
+	return ""
+}
+
+func (x *LeaderboardItem) GetUname() string {
+	if x != nil {
+		return x.Uname
+	}
+	return ""
+}
+
+func (x *LeaderboardItem) GetRetiredAmount() string {
+	if x != nil {
+		return x.RetiredAmount
+	}
+	return ""
+}
+
+func (x *LeaderboardItem) GetEns() string {
+	if x != nil {
+		return x.Ens
+	}
+	return ""
+}
+
+type GetLeaderboardResp struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	List []*LeaderboardItem `protobuf:"bytes,1,rep,name=list,proto3" json:"list,omitempty"`
+	Type string             `protobuf:"bytes,2,opt,name=type,proto3" json:"type,omitempty"`
+}
+
+func (x *GetLeaderboardResp) Reset() {
+	*x = GetLeaderboardResp{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_main_v1_main_proto_msgTypes[4]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetLeaderboardResp) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetLeaderboardResp) ProtoMessage() {}
+
+func (x *GetLeaderboardResp) ProtoReflect() protoreflect.Message {
+	mi := &file_api_main_v1_main_proto_msgTypes[4]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetLeaderboardResp.ProtoReflect.Descriptor instead.
+func (*GetLeaderboardResp) Descriptor() ([]byte, []int) {
+	return file_api_main_v1_main_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetLeaderboardResp) GetList() []*LeaderboardItem {
+	if x != nil {
+		return x.List
+	}
+	return nil
+}
+
+func (x *GetLeaderboardResp) GetType() string {
+	if x != nil {
+		return x.Type
+	}
+	return ""
+}
+
 var File_api_main_v1_main_proto protoreflect.FileDescriptor
 
 var file_api_main_v1_main_proto_rawDesc = []byte{
@@ -128,18 +325,50 @@ var file_api_main_v1_main_proto_rawDesc = []byte{
 	0x52, 0x65, 0x71, 0x12, 0x10, 0x0a, 0x03, 0x6d, 0x73, 0x67, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09,
 	0x52, 0x03, 0x6d, 0x73, 0x67, 0x22, 0x1c, 0x0a, 0x08, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73,
 	0x70, 0x12, 0x10, 0x0a, 0x03, 0x72, 0x65, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03,
-	0x72, 0x65, 0x73, 0x32, 0x52, 0x0a, 0x04, 0x4d, 0x61, 0x69, 0x6e, 0x12, 0x4a, 0x0a, 0x04, 0x50,
-	0x69, 0x6e, 0x67, 0x12, 0x10, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x76, 0x31, 0x2e, 0x50, 0x69,
-	0x6e, 0x67, 0x52, 0x65, 0x71, 0x1a, 0x11, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x76, 0x31, 0x2e,
-	0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17,
-	0x12, 0x15, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x6d, 0x61, 0x69, 0x6e, 0x2f,
-	0x76, 0x31, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x42, 0x5b, 0x0a, 0x16, 0x64, 0x65, 0x76, 0x2e, 0x6b,
-	0x72, 0x61, 0x74, 0x6f, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x76,
-	0x31, 0x42, 0x0b, 0x4d, 0x61, 0x69, 0x6e, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x56, 0x31, 0x50, 0x01,
-	0x5a, 0x32, 0x74, 0x6f, 0x75, 0x63, 0x61, 0x6e, 0x2d, 0x6c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62,
-	0x6f, 0x61, 0x72, 0x64, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x2d, 0x6d, 0x61, 0x69, 0x6e, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x6d, 0x61, 0x69, 0x6e, 0x2f, 0x76,
-	0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x65, 0x73, 0x22, 0xa6, 0x01, 0x0a, 0x11, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65,
+	0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x52, 0x65, 0x71, 0x12, 0x20, 0x0a, 0x05, 0x66, 0x69, 0x72,
+	0x73, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x42, 0x0a, 0xfa, 0x42, 0x07, 0x22, 0x05, 0x18,
+	0xe8, 0x07, 0x28, 0x00, 0x52, 0x05, 0x66, 0x69, 0x72, 0x73, 0x74, 0x12, 0x21, 0x0a, 0x04, 0x74,
+	0x79, 0x70, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x42, 0x0d, 0xfa, 0x42, 0x0a, 0x72, 0x08,
+	0x52, 0x03, 0x6e, 0x63, 0x74, 0xd0, 0x01, 0x01, 0x52, 0x04, 0x74, 0x79, 0x70, 0x65, 0x12, 0x27,
+	0x0a, 0x0a, 0x73, 0x74, 0x61, 0x72, 0x74, 0x5f, 0x74, 0x69, 0x6d, 0x65, 0x18, 0x03, 0x20, 0x01,
+	0x28, 0x09, 0x42, 0x08, 0xfa, 0x42, 0x05, 0x72, 0x03, 0xd0, 0x01, 0x01, 0x52, 0x09, 0x73, 0x74,
+	0x61, 0x72, 0x74, 0x54, 0x69, 0x6d, 0x65, 0x12, 0x23, 0x0a, 0x08, 0x65, 0x6e, 0x64, 0x5f, 0x74,
+	0x69, 0x6d, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x42, 0x08, 0xfa, 0x42, 0x05, 0x72, 0x03,
+	0xd0, 0x01, 0x01, 0x52, 0x07, 0x65, 0x6e, 0x64, 0x54, 0x69, 0x6d, 0x65, 0x22, 0x7f, 0x0a, 0x0f,
+	0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x49, 0x74, 0x65, 0x6d, 0x12,
+	0x1d, 0x0a, 0x0a, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x5f, 0x70, 0x75, 0x62, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x09, 0x77, 0x61, 0x6c, 0x6c, 0x65, 0x74, 0x50, 0x75, 0x62, 0x12, 0x14,
+	0x0a, 0x05, 0x75, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x75,
+	0x6e, 0x61, 0x6d, 0x65, 0x12, 0x25, 0x0a, 0x0e, 0x72, 0x65, 0x74, 0x69, 0x72, 0x65, 0x64, 0x5f,
+	0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x72, 0x65,
+	0x74, 0x69, 0x72, 0x65, 0x64, 0x41, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x10, 0x0a, 0x03, 0x65,
+	0x6e, 0x73, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x65, 0x6e, 0x73, 0x22, 0x56, 0x0a,
+	0x12, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x52,
+	0x65, 0x73, 0x70, 0x12, 0x2c, 0x0a, 0x04, 0x6c, 0x69, 0x73, 0x74, 0x18, 0x01, 0x20, 0x03, 0x28,
+	0x0b, 0x32, 0x18, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x65, 0x61, 0x64,
+	0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x49, 0x74, 0x65, 0x6d, 0x52, 0x04, 0x6c, 0x69, 0x73,
+	0x74, 0x12, 0x12, 0x0a, 0x04, 0x74, 0x79, 0x70, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x04, 0x74, 0x79, 0x70, 0x65, 0x32, 0xc6, 0x01, 0x0a, 0x04, 0x4d, 0x61, 0x69, 0x6e, 0x12, 0x4a,
+	0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x10, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x76, 0x31,
+	0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x71, 0x1a, 0x11, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e,
+	0x76, 0x31, 0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x22, 0x1d, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x6d, 0x61,
+	0x69, 0x6e, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x12, 0x72, 0x0a, 0x0e, 0x47, 0x65,
+	0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x12, 0x1a, 0x2e, 0x6d,
+	0x61, 0x69, 0x6e, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72,
+	0x62, 0x6f, 0x61, 0x72, 0x64, 0x52, 0x65, 0x71, 0x1a, 0x1b, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e,
+	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72,
+	0x64, 0x52, 0x65, 0x73, 0x70, 0x22, 0x27, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x21, 0x12, 0x1f, 0x2f,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x6d, 0x61, 0x69, 0x6e, 0x2f, 0x76, 0x31, 0x2f,
+	0x67, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x42, 0x5b,
+	0x0a, 0x16, 0x64, 0x65, 0x76, 0x2e, 0x6b, 0x72, 0x61, 0x74, 0x6f, 0x73, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x76, 0x31, 0x42, 0x0b, 0x4d, 0x61, 0x69, 0x6e, 0x50, 0x72,
+	0x6f, 0x74, 0x6f, 0x56, 0x31, 0x50, 0x01, 0x5a, 0x32, 0x74, 0x6f, 0x75, 0x63, 0x61, 0x6e, 0x2d,
+	0x6c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x2f, 0x61, 0x70, 0x70, 0x2f,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2d, 0x6d, 0x61, 0x69, 0x6e, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x6d, 0x61, 0x69, 0x6e, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x33,
 }
 
 var (
@@ -154,19 +383,25 @@ func file_api_main_v1_main_proto_rawDescGZIP() []byte {
 	return file_api_main_v1_main_proto_rawDescData
 }
 
-var file_api_main_v1_main_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_main_v1_main_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
 var file_api_main_v1_main_proto_goTypes = []interface{}{
-	(*PingReq)(nil),  // 0: main.v1.PingReq
-	(*PingResp)(nil), // 1: main.v1.PingResp
+	(*PingReq)(nil),            // 0: main.v1.PingReq
+	(*PingResp)(nil),           // 1: main.v1.PingResp
+	(*GetLeaderboardReq)(nil),  // 2: main.v1.GetLeaderboardReq
+	(*LeaderboardItem)(nil),    // 3: main.v1.LeaderboardItem
+	(*GetLeaderboardResp)(nil), // 4: main.v1.GetLeaderboardResp
 }
 var file_api_main_v1_main_proto_depIdxs = []int32{
-	0, // 0: main.v1.Main.Ping:input_type -> main.v1.PingReq
-	1, // 1: main.v1.Main.Ping:output_type -> main.v1.PingResp
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	3, // 0: main.v1.GetLeaderboardResp.list:type_name -> main.v1.LeaderboardItem
+	0, // 1: main.v1.Main.Ping:input_type -> main.v1.PingReq
+	2, // 2: main.v1.Main.GetLeaderboard:input_type -> main.v1.GetLeaderboardReq
+	1, // 3: main.v1.Main.Ping:output_type -> main.v1.PingResp
+	4, // 4: main.v1.Main.GetLeaderboard:output_type -> main.v1.GetLeaderboardResp
+	3, // [3:5] is the sub-list for method output_type
+	1, // [1:3] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
 }
 
 func init() { file_api_main_v1_main_proto_init() }
@@ -199,6 +434,42 @@ func file_api_main_v1_main_proto_init() {
 				return nil
 			}
 		}
+		file_api_main_v1_main_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetLeaderboardReq); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_main_v1_main_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*LeaderboardItem); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_main_v1_main_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetLeaderboardResp); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -206,7 +477,7 @@ func file_api_main_v1_main_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_main_v1_main_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   5,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
